# NCC-Lines

./: # Native Collateral Credit Lines - Corrected Hackathon .md  .gitignore  5_minute_demo_script.md  Cargo.toml  DEMO_SCRIPT.md  DEVNET.md  README.md
apps/dashboard/: init-pool-direct.js  package-lock.json  package.json  seed-pool.js
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/api/encrypt/create-input/: route.ts
apps/dashboard/src/app/api/ika/create-dwallet/: route.ts
apps/dashboard/src/app/borrow/: page.tsx
apps/dashboard/src/app/pools/: page.tsx
apps/dashboard/src/app/proofs/: page.tsx
apps/dashboard/src/components/: BorrowModal.tsx  BorrowPage.tsx  ClientWalletButton.tsx  Footer.tsx  HeroSection.tsx  LoanDashboard.tsx  Navbar.tsx  PoolsPage.tsx  PrivacyExplainer.tsx  ProofsPage.tsx  ProtocolStats.tsx  WalletProviders.tsx
apps/dashboard/src/lib/: constants.ts  onchain.ts  transactions.ts
apps/ika-worker/: Cargo.toml
apps/ika-worker/src/: main.rs
docs/: technical_architecture.md
programs/native_credit_lines/: Cargo.toml
programs/native_credit_lines/src/: errors.rs  fhe_graphs.rs  lib.rs  state.rs
programs/native_credit_lines/src/instructions/: attestation.rs  borrow.rs  create_loan.rs  debug_seed_pool.rs  initialize_pool.rs  mod.rs  policy.rs  repay.rs  vault.rs
programs/native_credit_lines/tests/: mollusk_tests.rs  print_seeds.rs  svm_tests.rs
scripts/: init-pool.js  init-pool.ts  package-lock.json  package.json  tsconfig.json
