[package]
name = "native-credit-lines"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
encrypt-types = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-dsl = { package = "encrypt-solana-dsl", git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-pinocchio = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
ika-dwallet-pinocchio = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }

[dev-dependencies]
# encrypt-solana-test has a broken transitive dep (agave-votor-messages) in pre-alpha.
# Re-enable once upstream fixes it. Using Mollusk-only testing for now.
# encrypt-solana-test = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
mollusk-svm   = { version = "0.11", features = ["inner-instructions"] }
# Aligned to what mollusk-svm 0.11 transitively requires (pubkey=4, account=3, instruction=3)
solana-account     = "3"
solana-instruction = "3"
solana-pubkey      = "4"
